--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
+    "emailjs": "^3.4.0",
+    "emailjs-com": "^2.6.4",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-gradient-progress": "^1.0.3",
+    "react-owl-carousel": "^2.3.3",
     "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
+    "react-skillbars": "^1.6.1",
     "react-typical": "^0.1.3",
     "web-vitals": "^1.1.1"
   },
