basic final done

--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "emailjs": "^3.4.0",
     "emailjs-com": "^2.6.4",
     "react": "^17.0.2",
+    "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-gradient-progress": "^1.0.3",
     "react-owl-carousel": "^2.3.3",
     "react-particles-js": "^3.4.1",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "react-skillbars": "^1.6.1",
