--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-gradient-progress": "^1.0.3",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-owl-carousel": "^2.3.3",
     "react-particles-js": "^3.4.1",
     "react-reveal": "^1.2.2",
